# core-staking-example

./: Anchor.toml  kinobi_script.cjs  package-lock.json  package.json
programs/core-staking-example/: Cargo.toml
programs/core-staking-example/src/: lib.rs
tests/: core-staking-example.ts
